service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
spec:
  selector:
    app: mlflow-deployment
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer  # Use "LoadBalancer" type to expose MLflow outside the cluster in Minikube
